--- a/watheeqplus/styles.css
+++ b/watheeqplus/styles.css
@@ -31,7 +31,10 @@ body {
     overflow-x: hidden;
     position: relative;
 }
-
+a{
+    text-decoration: none;
+    color: #fff;
+}
 [dir="ltr"] body {
     font-family: 'Inter', sans-serif;
 }
